# microbiome-ml

./: .gitignore  CONTRIBUTING.md  README.md  parameters.yaml  pixi.toml  pyproject.toml  todo.md
.github/workflows/: ci.yml
scripts/: pipeline.example.yaml  run_cv_to_final_eval.py
src/microbiome_ml/: __init__.py
src/microbiome_ml/core/: __init__.py  config.py
src/microbiome_ml/train/: cv.py  hyperparameters.yaml  results.py  trainer.py
src/microbiome_ml/utils/: __init__.py  _cache.py  logging.py  taxonomy.py
src/microbiome_ml/visualise/: visualisations.py
src/microbiome_ml/wrangle/: __init__.py  dataset.py  features.py  metadata.py  profiles.py  samples.py  splits.py
test/tests/: conftest.py  test_cv.py  test_dataset.py  test_features.py  test_integration.py  test_metadata.py  test_profiles.py  test_taxonomy.py  test_trainer.py  test_visualisations.py
